fixed shopping items alignment and added link to local images

--- a/src/Components/collection-item/collection-item.styles.scss
+++ b/src/Components/collection-item/collection-item.styles.scss
@@ -4,18 +4,43 @@
   flex-direction: column;
   height: 350px;
   align-items: center;
+  position: relative;
+  margin: 15px 0;
+
+  .image-container {
+    width: 100%;
+    height: 95%;
+  }
 
   .image {
     width: 100%;
-    height: 95%;
-    background-size: cover;
-    background-position: center;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .custom-button {
+    width: 80%;
+    opacity: 0.7;
+    position: absolute;
+    top: 240px;
+    display: none;
+  }
+
+  &:hover {
+    .image {
+      opacity: 0.8;
+    }
+    .custom-button {
+      opacity: 0.85;
+      display: flex;
+    }
   }
 
   .collection-footer {
     width: 100%;
     height: 5%;
     display: flex;
+    align-items: center;
     justify-content: space-between;
     font-size: 18px;
     margin: 10px 0;
